# nessie-cli

./: CHANGELOG.md  README.md  main.py  pyproject.toml  runtests.sh
.github/workflows/: ci-linux-ubuntu.yml
nessie_cli/: __init__.py  evaluator.py  interpreter.py  nessie_cli.tx
tests/test_files/: test_file.nss
