[project]
name = "nessie-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["nessie-api", "textx>=4.3.0"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pudb>=2025.1.5",
    "ruff>=0.15.5",
    "textx-dev>=0.2.0",
    "textx[cli]>=4.3.0",
]

[tool.uv.sources]
nessie-api = { git = "https://github.com/Nessie-org/nessie-api.git" }

[tool.setuptools.package-data]
nessie_cli = ["*.tx"]

[project.entry-points.textx_languages]
nessie_cli = "nessie_cli:nessie_cli_language"

[project.entry-points."nessie_plugins"]
nessie_cli_plugin = "nessie_cli:cli_plugin"
